src/objects/REVVY__MnPriceList__c.object
<CustomObject>
    <fields>
        <fullName>API_Max__c</fullName>
        <label>API Max</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>API_Min__c</fullName>
        <label>API Min</label>
        <precision>5</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>API_Rule__c</fullName>
        <label>API Rule</label>
        <picklist>
            <picklistValues>
                <fullName>Protected</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Range</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Minimum</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>CCMS_ID__c</fullName>
        <label>CCMS ID</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CCMS_PriceP_Start_Date__c</fullName>
        <description>Price Start date for CCMS price plan</description>
        <label>CCMS PriceP Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>CCMS_Price_Plan_Name__c</fullName>
        <label>CCMS Price Plan Name</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CPQ_UI_Name__c</fullName>
        <label>CPQ UI Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Country_FM__c</fullName>
        <formula>TEXT( Country_applicability__c )</formula>
        <label>Country</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country_applicability__c</fullName>
        <description>ocd</description>
        <label>Country applicability</label>
        <picklist>
            <picklistValues>
                <fullName>United States</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Canada</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>US</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>LU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NL</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>GB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>UK</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>BR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MX</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>AU</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NZ</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CN</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>KR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>PH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SG</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Discount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Associate with Discount Record</description>
        <label>Discount</label>
        <referenceTo>Discount__c</referenceTo>
        <relationshipLabel>Price Lists</relationshipLabel>
        <relationshipName>Price_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Equipment_Warranty__c</fullName>
        <label>Equipment Warranty(months)</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Grouping__c</fullName>
        <label>Grouping</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Input_Common_Name__c</fullName>
        <label>Input Common Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Valid__c</fullName>
        <formula>IF(REVVY__Start_Date__c &lt;= TODAY()
&amp;&amp;  REVVY__End_Date__c &gt;= TODAY()
&amp;&amp;  ISPICKVAL( REVVY__Status__c , &quot;Active&quot;)  , TRUE, FALSE)</formula>
        <label>Is Valid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LOB__c</fullName>
        <label>LOB</label>
        <picklist>
            <picklistValues>
                <fullName>CC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>IA</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trad IH</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Notation_of_current_version__c</fullName>
        <defaultValue>&quot;Current&quot;</defaultValue>
        <description>ocd</description>
        <label>Notation of current version</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OCD_Beh_Discount__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Behavioral Discount</label>
        <referenceTo>OCD_Beh_Discount__c</referenceTo>
        <relationshipLabel>Price Lists</relationshipLabel>
        <relationshipName>Price_Lists</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Price_Option_Name__c</fullName>
        <externalId>true</externalId>
        <label>Price Option Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Price_Unit_of_Measure__c</fullName>
        <label>Price Unit of Measure</label>
        <picklist>
            <picklistValues>
                <fullName>Price at Lowest Unit (all reagents at unit price )</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>REVVY__Currency__c</fullName>
        <description>Currency used for this price list.</description>
        <inlineHelpText>Currency used for this price list.</inlineHelpText>
        <label>Currency</label>
        <picklist>
            <picklistValues>
                <fullName>CAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>USD</fullName>
                <default>true</default>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>REVVY__End_Date__c</fullName>
        <defaultValue>date (
year(today()) +  value($Label.REVVY__MnDefaultEffectiveEndDateInYears),
month(today()),
day(today())
)</defaultValue>
        <description>Date when this price list expires.</description>
        <inlineHelpText>Date when this price list expires.</inlineHelpText>
        <label>Effective End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>REVVY__Id__c</fullName>
        <description>Unique ID for each record that can be used as an external ID for importing and exporting data.</description>
        <externalId>true</externalId>
        <inlineHelpText>Unique ID for this record.</inlineHelpText>
        <label>Price List ID</label>
        <length>80</length>
        <required>true</required>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>REVVY__PriceType__c</fullName>
        <description>The type of price stored in this pricelist</description>
        <inlineHelpText>The type of price stored in this pricelist</inlineHelpText>
        <label>Price Type</label>
        <picklist>
            <picklistValues>
                <fullName>Contract Price</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Price List</fullName>
                <default>true</default>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>REVVY__Segment__c</fullName>
        <description>Defines the customer segment that this price list is applied to.</description>
        <inlineHelpText>Defines the customer segment that this price list is applied to.</inlineHelpText>
        <label>Price Segment</label>
        <picklist>
            <picklistValues>
                <fullName>Education</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>General</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Government</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Health Care</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manufacturing</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Process Industry</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>NA</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>REVVY__SourceQuote__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Unique ID of the Quote object used to generate this pricelist.</description>
        <inlineHelpText>Unique ID of the Quote object used to generate this pricelist.</inlineHelpText>
        <label>Group Quote</label>
        <referenceTo>REVVY__MnQuote__c</referenceTo>
        <relationshipLabel>Contract Price List</relationshipLabel>
        <relationshipName>ContractPriceList</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>REVVY__Start_Date__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>Date when this price list takes effect.</description>
        <inlineHelpText>Date when this price list takes effect.</inlineHelpText>
        <label>Effective Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>REVVY__Status__c</fullName>
        <description>Controls whether the price list is in effect. If the price list is in draft, then it is not in effect. If the price list is active, then it is in effect.</description>
        <inlineHelpText>Controls whether the price list is in effect. If the price list is in draft, then it is not in effect. If the price list is active, then it is in effect.</inlineHelpText>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Active</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Training__c</fullName>
        <label>Training</label>
        <length>80</length>
        <type>Text</type>
    </fields>
</CustomObject>